--- a/PA2/PA2/PA2.vcxproj
+++ b/PA2/PA2/PA2.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{D6E099C5-E5D1-485A-AF80-A6C136FDCACA}</ProjectGuid>
+    <ProjectGuid>{0C6309C4-E2EF-4407-8112-2679AF82A569}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>PA2</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
@@ -142,6 +142,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Functions.c" />
+    <ClCompile Include="Main.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Header.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
