--- a/PA3/PA3/PA3.vcxproj.filters
+++ b/PA3/PA3/PA3.vcxproj.filters
@@ -31,5 +31,8 @@
     <ClCompile Include="Main.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Exam1.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
