Moving PC's. Almost done with the menu and file handling.

--- a/PA6/PA6/PA6.vcxproj
+++ b/PA6/PA6/PA6.vcxproj
@@ -148,15 +148,22 @@
     <ClCompile Include="Functions.cpp" />
     <ClCompile Include="List.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Menu.cpp" />
     <ClCompile Include="Node.cpp" />
     <ClCompile Include="Stack.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Functions.h" />
     <ClInclude Include="List.h" />
+    <ClInclude Include="Menu.h" />
     <ClInclude Include="Node.h" />
     <ClInclude Include="Resources.h" />
     <ClInclude Include="Stack.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="FullAttendanceReport.txt" />
+    <Text Include="master.txt" />
+    <Text Include="ThresholdAttendanceReport.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
