--- a/PA6/PA6/PA6.vcxproj.filters
+++ b/PA6/PA6/PA6.vcxproj.filters
@@ -35,6 +35,9 @@
     <ClCompile Include="Stack.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Menu.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Resources.h">
@@ -52,5 +55,19 @@
     <ClInclude Include="Stack.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Menu.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="FullAttendanceReport.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="ThresholdAttendanceReport.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="master.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
