--- a/PA9/PA9/PA9.vcxproj
+++ b/PA9/PA9/PA9.vcxproj
@@ -71,7 +71,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Board.cpp" />
+    <ClCompile Include="Scoreboard.cpp" />
+    <ClCompile Include="Window.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Square.cpp" />
   </ItemGroup>
@@ -79,7 +80,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Board.h" />
+    <ClInclude Include="Scoreboard.h" />
+    <ClInclude Include="Window.h" />
     <ClInclude Include="Resources.h" />
     <ClInclude Include="Square.h" />
   </ItemGroup>
