--- a/PA9/PA9/PA9.vcxproj.filters
+++ b/PA9/PA9/PA9.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClInclude Include="Scoreboard.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Header.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
