--- a/PA9/PA9/PA9.vcxproj
+++ b/PA9/PA9/PA9.vcxproj
@@ -80,7 +80,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Header.h" />
+    <ClInclude Include="Gameplay.h" />
     <ClInclude Include="Scoreboard.h" />
     <ClInclude Include="Window.h" />
     <ClInclude Include="Resources.h" />
